--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
 .App {
-  text-align: center;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(90deg, #16142B 20%, #100F1F, #16142B 20%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loading {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 15px;
+    background: linear-gradient(90deg, #16142B 20%, #100F1F, #16142B 20%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loading h2 {
+    color: #f2f2f2;
+    font-family: sans-serif;
+    font-size: 18px;
 }
