--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background: linear-gradient(90deg, #16142B 20%, #100F1F, #16142B 20%);
+}
+
+::-webkit-scrollbar {
+    width: 9px;
+    background: #16142B;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #16142B;
+}
+    
+::-webkit-scrollbar-thumb {
+    background: #AAAAAA;
+    border-radius: 10px;
+}
+    
+::-webkit-scrollbar-thumb:hover {
+    background: #8b8b8b; 
 }
