--- a/src/assets/styles/movieList.scss
+++ b/src/assets/styles/movieList.scss
@@ -14,9 +14,9 @@
 .list_cards {
     margin-top: 50px;
     width: 95%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
     gap: 5px;
     flex-grow: 2;
 }
@@ -30,4 +30,10 @@
     border-bottom: 1px solid #aeaeae;
     padding: 10px;
     color: #fff;
+}
+
+@media (max-width: 768px) {
+    .list_cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
